refactor : 첫 번째 대기자 반환 로직 waitings 도메인으로 이동